[package]
name = "minimal-tls"
version = "0.1.0"
authors = ["Cyrus Malekpour <cmalekpour@gmail.com>", "Tianyi Jin <freddie.jin22@gmail.com>", "Daniel Saha <drs5ma@virginia.edu>", "Bhuvanesh Murali"]
build = "build.rs"
repository = "https://github.com/cmalekpour/minimal-tls.git"
homepage = "https://github.com/cmalekpour/minimal-tls"
license = "MIT"
readme = "README.md"
description = "Rust implementation of TLS 1.3"

[build-dependencies]
bindgen = "0.22.1"

[dependencies]
byteorder = "1"
libc = "0.2.21"
pem = "0.3"
openssl = "0.9.11"
clippy = {version = "*", optional = true}

[features]
default = []
